# node-llama-cpp

./: CLAUDE.md  package-lock.json
.vitepress/config/: sidebar.ts
docs/: index.md
docs/guide/: multimodal-examples.md  multimodal.md
examples/: multimodal-chat-example.ts
llama/: CMakeLists.txt  binariesGithubRelease.json
llama/addon/: AddonAudioModel.cpp.bak  AddonAudioModel.h  AddonModel.cpp  AddonVisionModel.cpp  AddonVisionModel.cpp.bak  AddonVisionModel.h  addon.cpp
src/: index.ts
src/bindings/: AddonTypes.ts
src/evaluator/LlamaMultimodalChatSession/: LlamaMultimodalChatSession.ts
src/evaluator/LlamaMultimodalContext/: LlamaMultimodalContext.ts
src/evaluator/LlamaMultimodalModel/: LlamaMultimodalModel.ts
src/types/: MultimodalTypes.ts
test/standalone/: multimodal.test.ts
